tdf#166712 sc: don't export empty dbPr/olapPr elements to connections.xml

Otherwise Excel fails to open the file.

Change-Id: I6eec74c48d20f62a3a75f06a4197ef7ead75b446
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185742
Reviewed-by: Bayram Çiçek <bayram.cicek@collabora.com>
Tested-by: Jenkins